logout and refresh token
